# lpp_ecmr

./: .gitignore  _quarto.yml  index.fff  index.html  index.qmd  index.tex  index.ttt  modeling_Hellerstedt_Gunn_2026-07-16_review.docx  older_draft.md  pyproject.toml  qa_contrast_caption.html  qa_grouped_lpp.html  qa_split_diagnostics.html  references.bib  short_index.docx  shorter_index.docx  shorter_index.md
analyses/: README.md  data_preparation.ipynb  model_comparison.ipynb  model_comparison_ecmr.ipynb  model_comparison_single_context.ipynb  render_cross_validation.ipynb  render_cross_validation_ecmr.ipynb  render_group_level_fitting.ipynb  render_model_comparison.ipynb  render_model_comparison_exclude_termination.ipynb  render_model_comparison_full.ipynb  render_model_comparison_full_set.ipynb  render_model_comparison_include_termination.ipynb  render_model_comparison_manuscript.ipynb  render_model_comparison_manuscript_set.ipynb  render_model_fitting.ipynb  render_model_fitting_full_ecmr.ipynb  render_model_fitting_group_level.ipynb  render_model_fitting_single_context.ipynb  render_model_fitting_strength.ipynb  render_parameter_sensitivity.ipynb  render_reference_analyses.ipynb
archive/: 2026-03-27_assessing_neurocognitive_hypotheses.pptx  Behaviour_and_Relationship_to_LPP.Rmd  Manuscript_260219_v2.md  changelog.md  changelog_v1.md  index.qmd  index_legacy.qmd  methods_and_results_extended.docx  model discussion with nathaniel.docx  old_index.qmd  possible_extensions.md  short_index.md  slides.pptx
data/: README.md  TalmiEEG.h5  data_preparation.ipynb
(+4209 files in other folders)
