[project]
name = "lpp-ecmr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jaxcmr",
    "matplotlib",
    "numpy",
    "h5py",
    "jax",
    "scipy",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
dev = ["papermill", "ipykernel", "pytest", "ruff"]

[tool.uv.sources]
jaxcmr = { path = "../jaxcmr", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
